# testApp_sourcecode

./: .dockerignore  .gitignore  .releaserc.json  CHANGELOG.md  Dockerfile  LICENSE  LICENSE.md  README copy.md  README.md  go.mod  new-readme.md  pyproject.toml
.github/workflows/: changes.yml  ci.yml  docker.yml  dockerhub-cleanup.yml  release.yml  template-docker.yml  template-semantic-release.yml
awscli_addons/: cli.py  custom.py
awscli_addons/commands/: assume_role.py  mfa.py  myip.py  verify.py  whoami.py
cmd/server/: hostinfo.go
docker/: Dockerfile  docker-compose.yml
docs/: 00-overview.md  01-getting-started.md  02-installation.md  03-usage.md  05-architecture.md  06-deployment.md  07-cloud-detection.md  08-api.md  09-releasing.md  TODO.md  semantic.md
scripts/hooks/: commit-msg  pre-commit
tools/: build.sh  installer.sh  setup-hooks.sh
web/templates/: index.html  index_to_update.html
