[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awscli-addons"
version = "0.1.0"
description = "AWS CLI Addons - MFA, Assume Role, WhoAmI, MyIP"
authors = [
  { name = "Maksym Leus", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "boto3>=1.28.0",
  "click>=8.0"
]

[project.scripts]
awscli-addons = "awscli_addons.cli:cli"

